--- a/src/app/pages/characters/characters.component.css
+++ b/src/app/pages/characters/characters.component.css
@@ -5,7 +5,6 @@
   flex-wrap: wrap;
   justify-content: center;
 
-
   .card {
     width: 300px;
     height: 300px;
@@ -14,9 +13,8 @@
 
     .infoCard {
       text-align: center;
-      font-family: 'Courier New', Courier, monospace;
+      font-family: "Courier New", Courier, monospace;
     }
-
 
     .imgCard {
       text-align: center;
@@ -45,9 +43,10 @@
   justify-content: center;
   display: flex;
   button {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     font-weight: 600;
     width: 100px;
+    height: 30px;
     color: #2c3539;
     justify-content: center;
     align-items: center;
@@ -58,7 +57,7 @@
   }
   button:hover {
     border: #e2f9ff solid 1px;
-    background-color: #2c3539;
+    background-color: #54c487;
     color: #e2f9ff;
   }
 }
@@ -67,21 +66,26 @@ form {
   display: flex;
   flex-flow: column wrap;
   justify-content: space-between;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
+  align-items: center;
 }
 
 input,
 select {
+  width: 300px;
+  height: 50px;
   margin-bottom: 5px;
   text-align: center;
   border-radius: 20px;
   border: hidden;
   background-color: #e2f9ff;
   color: #2c3539;
+  outline-color: #54c487;
 }
 
 .searchBtn {
   width: 200px;
+  height: 50px;
   color: #2c3539;
   justify-content: center;
   align-items: center;
@@ -94,24 +98,24 @@ select {
 
 .searchBtn:hover {
   border: #e2f9ff solid 1px;
-  background-color: #2c3539;
+  background-color: #54c487;
   color: #e2f9ff;
 }
 
-.rotate{
-  transition: transform 1.0s
+.rotate {
+  transition: transform 1s;
 }
 
-.rotate:hover{
+.rotate:hover {
   transform: rotateZ(180deg);
 }
 
-.img:hover{
+.img:hover {
   border-radius: 100%;
-  border: #2c3539 solid 2px
+  border: #2c3539 solid 2px;
 }
 
-.contentId{
+.contentId {
   background-color: #f0fcff;
   display: flex;
   flex-direction: column;
@@ -121,7 +125,7 @@ select {
   align-items: center;
 }
 
-.cardId{
+.cardId {
   width: 300px;
   height: 400px;
   border-radius: 20px;
@@ -131,23 +135,58 @@ select {
   align-items: center;
 }
 
-.textId{
+.textId {
   justify-content: center;
   align-items: center;
   height: auto;
 }
-.imgId{
+.imgId {
   width: 300px;
   height: 200px;
   border-radius: 20px;
   margin-top: 10px;
 }
 
-.btnId{
-  align-items:start;
+.btnId {
+  align-items: start;
   width: 100px;
 }
 
-.infoId{
+.infoId {
   font-weight: 600;
+}
+
+.arrowContainer{
+  margin-bottom: 1rem;
+}
+
+.arrowBackImg{
+  cursor: pointer;
+}
+
+
+@media (max-width: 620px) {
+  .welcomeImg {
+    width: 300px;
+    height: 100px;
+  }
+
+  form {
+    width: 300px;
+    height: 150px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  select,
+  input {
+    height: 30px;
+  }
+
+  .searchBtn {
+    width: 150px;
+    height: 30px;
+    margin: auto;
+  }
 }
