--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
-/* src/styles.css */
-@import 'node_modules/bootstrap/dist/css/bootstrap.min.css';
+
 
 *{
     margin: 0;
     padding: 0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
